rafael@Rafael-Elias-Ioppi MINGW64 /workspaces/protocolo-me (main)